# Numerary

./: CMakeLists.txt
src/: differentiation.cpp  functions.cpp  incgamma.cpp  integration.cpp  interpolation.cpp  linear_systems_of_equations.cpp  maximum.cpp  minimum.cpp  nonlinear_systems_of_equations.cpp  ordinary_differential_equations.cpp  regression.cpp  root.cpp
tests/: CMakeLists.txt  test_differentiate.cpp  test_dorpi.cpp  test_gamma.cpp  test_integrate.cpp  test_lagrange_polynomial.cpp  test_linear_systems_of_equations.cpp  test_maximum.cpp  test_minimum.cpp  test_newton.cpp  test_regression.cpp  test_root.cpp
